# flexitino

./: README.md
caro_flexbe_behavior/: CHANGELOG.rst  CMakeLists.txt  package.xml
caro_skills_flexbe_behaviors/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
caro_skills_flexbe_behaviors/caro_skills_flexbe_behaviors/: motormove_sm.py  moveto_sm.py
caro_skills_flexbe_behaviors/manifest/: example_action_state_behavior.xml  example_behavior.xml  motormove.xml  move_to.xml
caro_skills_flexbe_states/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
caro_skills_flexbe_states/caro_skills_flexbe_states/: gripper_command_state.py  motor_move.py  move_gripper_state.py  move_to_state.py
caro_skills_flexbe_states/tests/: example_action_state.test  example_state.test  run_colcon_test.py  run_tests.launch.py
